Issue 36767: Stack trace creation taking >30% of time for some imports